    assertion in Query which would attempt
    to raise if a generative method were called
    after from_statement() were called.
    [ticket:2199].  Also in 0.6.9.

- sql
  - Fixed two subtle bugs involving column 
    correspondence in a selectable,
    one with the same labeled subquery repeated, the other
    when the label has been "grouped" and 
    loses itself.  Affects [ticket:2188].

- engine
  - Use urllib.parse_qsl() in Python 2.6 and above,
    no deprecation warning about cgi.parse_qsl()
    [ticket:1682]

  - Added mixin class sqlalchemy.ext.DontWrapMixin.
    User-defined exceptions of this type are never
    wrapped in StatementException when they 
    occur in the context of a statement 
    execution.

 - StatementException wrapping will display the
   original exception class in the message.  

- mssql
  - Adjusted the pyodbc dialect such that bound
    values are passed as bytes and not unicode
    if the "Easysoft" unix drivers are detected. 
    This is the same behavior as occurs with
    FreeTDS.  Easysoft appears to segfault
    if Python unicodes are passed under
    certain circumstances.

- oracle
  - Added ORA-00028 to disconnect codes, use 
    cx_oracle _Error.code to get at the code,
    [ticket:2200].  Also in 0.6.9.

- examples
  - Repaired the examples/versioning test runner
    to not rely upon SQLAlchemy test libs,
    nosetests must be run from within
    examples/versioning to get around setup.cfg
    breaking it.

  - Tweak to examples/versioning to pick the
    correct foreign key in a multi-level
    inheritance situation.

  - Fixed the attribute shard example to check
    for bind param callable correctly in 0.7 
    style.

0.7.1
=====
- general
  - Added a workaround for Python bug 7511 where
    failure of C extension build does not 
    raise an appropriate exception on Windows 64
    bit + VC express [ticket:2184]

- orm
  - "delete-orphan" cascade is now allowed on
    self-referential relationships - this since